Fix broken unit test (under JDK 1.6 only?) * ExtractorHTMLTest.java, JerichoExtractorHTMLTest.java     construct valid file: URL that won't be confused with FTP url